--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose-findorcreate": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^8.0.0",
